--- a/last/kasa/src/styles/index.scss
+++ b/last/kasa/src/styles/index.scss
@@ -1,1 +1,17 @@
 @import "../styles/variables";
+@import "../styles/about";
+@import "../styles/error";
+@import "../styles/footer";
+@import "../styles/header";
+@import "../styles/housing";
+
+//modules
+@import "../styles/modules/carrousel";
+@import "../styles/modules/carrouselPic";
+@import "../styles/modules/grid";
+@import "../styles/modules/lessor";
+@import "../styles/modules/photo";
+@import "../styles/modules/rates";
+@import "../styles/modules/scroller";
+@import "../styles/modules/tags";
+@import "../styles/modules/texts";
