--- a/last/kasa/src/styles/index.css
+++ b/last/kasa/src/styles/index.css
@@ -1,2 +1,119 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap");
+.About {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.About .photo_title {
+  display: none;
+}
+
+.Header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin: 50px 0;
+  width: 100%;
+  font-weight: 500;
+  font-size: 24px;
+}
+
+.Header img {
+  width: auto;
+}
+
+.Header nav {
+  margin-left: auto;
+}
+
+.Header nav .Link {
+  margin-left: 60px;
+}
+
+.Grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
+  grid-auto-rows: minmax(100px, auto);
+  height: auto;
+  padding: 50px;
+  margin: 60px 0;
+  border-radius: 30px;
+  background-color: #F7F7F7;
+}
+
+.Grid .photo_grid {
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  cursor: pointer;
+}
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html,
+body,
+#root,
+.App {
+  height: 100%;
+}
+
+body {
+  width: 100%;
+  margin: 0;
+  font-family: Montserrat, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  width: 100%;
+}
+
+.App {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.content {
+  padding: 0 60px;
+  width: 100%;
+  max-width: 1520px;
+}
+
+.Link {
+  color: #FF6060;
+  text-decoration: none;
+}
+
+.Link:hover {
+  text-decoration: underline;
+}
 /*# sourceMappingURL=index.css.map */
