--- a/last/kasa/src/styles/index.scss
+++ b/last/kasa/src/styles/index.scss
@@ -15,3 +15,51 @@
 @import "../styles/modules/scroller";
 @import "../styles/modules/tags";
 @import "../styles/modules/texts";
+
+//global
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+html,
+body,
+#root,
+.App {
+	height: 100%;
+}
+
+body {
+  width: 100%;
+	margin: 0;
+	font-family: Montserrat, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+		"Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+	font-weight: 400;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+#root {
+  width: 100%;
+}
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+.content {
+  padding: 0 60px;
+  width: 100%;
+  max-width: 1520px;
+}
+
+.Link {
+	color: $primary;
+	text-decoration: none;
+	&:hover {
+		text-decoration: underline;
+	}
+}
