--- a/last/kasa/src/styles/index.scss
+++ b/last/kasa/src/styles/index.scss
@@ -4,6 +4,8 @@
 @import "../styles/footer";
 @import "../styles/header";
 @import "../styles/housing";
+@import "../styles/normalize";
+
 
 //modules
 @import "../styles/modules/carrousel";
