--- a/last/kasa/src/styles/index.css
+++ b/last/kasa/src/styles/index.css
@@ -36,7 +36,7 @@
 }
 
 .error_txt {
-  margin: 5% 0;
+  margin: 5% 5% 15% 5%;
   font-size: 30px;
   font-weight: 500;
 }
@@ -610,7 +610,7 @@ template {
 .Grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)(3);
+  -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
   grid-gap: 50px;
   grid-auto-rows: minmax(100px, auto);
@@ -650,6 +650,59 @@ template {
 .Lessor .picture img {
   width: 64px;
   border-radius: 50%;
+}
+
+.Photo {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.photo_img {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 200px;
+  border-radius: 30px;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center;
+  background-color: #F7F7F7;
+}
+
+.photo_title {
+  position: absolute;
+  width: 100%;
+  margin: 60px 0;
+  text-align: center;
+  top: 0;
+  left: 0;
+  font-size: 48px;
+  font-weight: 500;
+  color: white;
+  z-index: 2;
+}
+
+.photo_sub_title {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  font-size: 18px;
+  font-weight: 600;
+  color: white;
+}
+
+.loading {
+  background-color: #F7F7F7;
 }
 
 .Rates {
@@ -786,8 +839,7 @@ body,
 body {
   width: 100%;
   margin: 0;
-  font-family: Montserrat, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
- "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: Montserrat, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -814,7 +866,7 @@ body {
 }
 
 .content {
-  padding: 0 60px;
+  padding: 20px 60px;
   width: 100%;
   max-width: 1520px;
 }
