--- a/last/kasa/src/styles/_variables.scss
+++ b/last/kasa/src/styles/_variables.scss
@@ -1,8 +1,15 @@
 //colors
 $primary: #FF6060;
 $greyL: #F7F7F7;
-//gradient
+//gradient figma test
 $gradient: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 
 //Fonts Montserrat
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+
+//breakpoints / media queries
+$breakpoints: (
+    "smartphone": 500px,
+    "tablet": 768px
+
+);
