--- a/last/kasa/src/styles/modules/_scroller.scss
+++ b/last/kasa/src/styles/modules/_scroller.scss
@@ -9,7 +9,7 @@
     border: 12px solid $primary;
     border-bottom-color: transparent;
     border-radius: 50%;
-    animation: 1s infinite ease-in rotate;
+    animation: 3s infinite ease-in rotate;
     height: 0;
     width: 0;
     opacity: .7;
@@ -22,8 +22,18 @@
     border: 10px solid $primary;
     border-bottom-color: transparent;
     border-radius: 50%;
-    animation: .6s infinite ease-in rotate;
+    animation: 0.6s infinite ease-in rotate;
     height: 0;
     width: 0;
     opacity: .4;
+}
+
+/*animation rotation*/
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
