--- a/last/kasa/src/styles/modules/_texts.scss
+++ b/last/kasa/src/styles/modules/_texts.scss
@@ -55,4 +55,21 @@
 	font-size: 24px;
 }
 
-/*keyframe shake*/
+/*keyframes text "shaker" style" for chevrons Up/Down*/
+@keyframes shake {
+	from {
+		transform: rotate(10deg);
+	}
+	15% {
+		transform: rotate(-15deg);
+	}
+	35% {
+		transform: rotate(25deg);
+	}
+	75% {
+		transform: rotate(-10deg);
+	}
+	to {
+		transform: rotate(0deg);
+	}
+}
