--- a/last/kasa/src/styles/index.css
+++ b/last/kasa/src/styles/index.css
@@ -13,6 +13,11 @@
   display: none;
 }
 
+.AboutTxt {
+  width: 90%;
+  margin: auto;
+}
+
 .Error404 {
   display: -webkit-box;
   display: -ms-flexbox;
