--- a/last/kasa/src/styles/index.css
+++ b/last/kasa/src/styles/index.css
@@ -685,6 +685,30 @@ template {
   cursor: pointer;
 }
 
+/*Responsive*/
+@media (max-width: 964px) {
+  .Grid {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    border-radius: 15px;
+    grid-gap: 30px;
+    padding: 30px;
+    margin: 40px 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .Grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    border-radius: 10px;
+    grid-gap: 6vw;
+    padding: 0;
+    margin: 30px 0;
+    background-color: white;
+  }
+}
+
 .Lessor {
   display: -webkit-box;
   display: -ms-flexbox;
