--- a/last/kasa/src/styles/modules/_grid.scss
+++ b/last/kasa/src/styles/modules/_grid.scss
@@ -17,3 +17,24 @@
     }
   }
   
+  /*Responsive*/
+  @media (max-width: 964px) {
+    .Grid {
+        grid-template-columns: 1fr 1fr;
+        border-radius: 15px;
+        grid-gap: 30px;
+        padding: 30px;
+        margin: 40px 0;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .Grid {
+        grid-template-columns: 1fr;
+        border-radius: 10px;
+        grid-gap: 6vw;
+        padding: 0;
+        margin: 30px 0;
+        background-color: white;
+    }
+  }
