--- a/last/kasa/src/styles/_variables.scss
+++ b/last/kasa/src/styles/_variables.scss
@@ -10,6 +10,7 @@ $gradient: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5)
 //breakpoints / media queries
 $breakpoints: (
     "smartphone": 500px,
-    "tablet": 768px
+    "tablet": 768px,
+    "tablet-end": 964px
 
 );
