--- a/last/kasa/src/styles/index.css
+++ b/last/kasa/src/styles/index.css
@@ -786,6 +786,39 @@ template {
   background-color: #F7F7F7;
 }
 
+/*Responsive*/
+@media (max-width: 964px) {
+  .photo_img {
+    height: 150px;
+    border-radius: 20px;
+  }
+  .photo_title {
+    margin: 50px 0;
+    font-size: 40px;
+  }
+  .photo_sub_title {
+    bottom: 15px;
+    left: 15px;
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  .photo_img {
+    height: 120px;
+    border-radius: 10px;
+  }
+  .photo_title {
+    margin: 30px 0;
+    padding: 0 5%;
+    font-size: 30px;
+    line-height: 30px;
+  }
+  .photo_sub_title {
+    font-size: 3.5vw;
+  }
+}
+
 .Rates {
   display: -webkit-box;
   display: -ms-flexbox;
