--- a/last/kasa/src/styles/index.css
+++ b/last/kasa/src/styles/index.css
@@ -635,6 +635,32 @@ template {
   }
 }
 
+/*Responsive*/
+@media (max-width: 964px) {
+  .Carousel .photo {
+    height: 350px;
+  }
+  .Carousel .container {
+    height: 350px;
+  }
+  .Carousel .arrows > .arrow {
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 768px) {
+  .Carousel .photo {
+    height: 210px;
+  }
+  .Carousel .container {
+    height: 210px;
+  }
+  .Carousel .arrows > .arrow {
+    font-size: 30px;
+    padding: 10px;
+  }
+}
+
 .ci {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -662,6 +688,19 @@ template {
   font-size: 21px;
   font-weight: 500;
   text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.4);
+}
+
+/*Responsive*/
+@media (max-width: 964px) {
+  .ci span {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 768px) {
+  .ci span {
+    display: none;
+  }
 }
 
 .Grid {
