--- a/last/kasa/src/styles/modules/_lessor.scss
+++ b/last/kasa/src/styles/modules/_lessor.scss
@@ -15,3 +15,33 @@
 		}
 	}
 }
+
+/*Responsive*/
+@media (max-width: 964px) {
+	.Owner {
+		order: 2;
+		margin: 10px 0 5px 0;
+		.name {
+			font-size: 14px;
+		}
+		.picture {
+			img {
+				width: 48px;
+			}
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.Owner {
+		margin: 0;
+		.name {
+			font-size: 10px;
+		}
+		.picture {
+			img {
+				width: 32px;
+			}
+		}
+	}
+}
