--- a/last/kasa/src/styles/_header.scss
+++ b/last/kasa/src/styles/_header.scss
@@ -17,3 +17,31 @@
         }
     }
 }
+
+/*Responsive*/
+@media (max-width: 964px) {
+    .Header {
+        margin: 30px 0;
+        font-size: 18px;
+        img {
+            width: 150px;
+        }
+        nav > .Link {
+            margin-left: 40px;
+        }
+    }
+}
+
+@media (max-width:768px) {
+    .Header {
+        margin: 15px 0;
+        font-size: 12px;
+        img {
+            width: 100px;
+        }
+        nav > .Link {
+            text-transform: uppercase;
+            margin-left: 20px;
+        }
+    }
+}
