--- a/last/kasa/src/styles/modules/_lessor.scss
+++ b/last/kasa/src/styles/modules/_lessor.scss
@@ -18,7 +18,7 @@
 
 /*Responsive*/
 @media (max-width: 964px) {
-	.Owner {
+	.Lessor {
 		order: 2;
 		margin: 10px 0 5px 0;
 		.name {
@@ -33,7 +33,7 @@
 }
 
 @media (max-width: 768px) {
-	.Owner {
+	.Lessor {
 		margin: 0;
 		.name {
 			font-size: 10px;
