--- a/last/kasa/src/styles/_footer.scss
+++ b/last/kasa/src/styles/_footer.scss
@@ -29,7 +29,7 @@
   @media (max-width:768px) {
     .Footer {
         font-size: 12px;
-        background-color: $greym;
+        background-color: $greyL;
         padding: 10vh;
     }
     .logo_footer {
