--- a/last/kasa/src/styles/index.css
+++ b/last/kasa/src/styles/index.css
@@ -116,7 +116,6 @@
 @media (max-width: 768px) {
   .Footer {
     font-size: 12px;
-    background-color: #F7F7F7;
     padding: 10vh;
   }
   .logo_footer {
@@ -1058,6 +1057,28 @@ template {
 .Rates .empty {
   font-size: 24px;
   color: #F7F7F7;
+}
+
+/*Responsive*/
+@media (max-width: 964px) {
+  .Rates {
+    margin: 0;
+  }
+  .Rates .full {
+    font-size: 18px;
+  }
+  .Rates .empty {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  .Rates .full {
+    font-size: 14px;
+  }
+  .Rates .empty {
+    font-size: 14px;
+  }
 }
 
 .Scroller {
