--- a/last/kasa/src/styles/index.css
+++ b/last/kasa/src/styles/index.css
@@ -1137,6 +1137,27 @@ template {
   }
 }
 
+/*Responsive*/
+@media (max-width: 964px) {
+  .Tags .tag_elt {
+    border-radius: 10px;
+    padding: 3px 8px;
+    margin-right: 15px;
+    font-size: 12px;
+    font-weight: 500;
+  }
+}
+
+@media (max-width: 768px) {
+  .Tags .tag_elt {
+    border-radius: 10px;
+    padding: 2px 5px;
+    margin-right: 10px;
+    font-size: 10px;
+    font-weight: 500;
+  }
+}
+
 .Tags {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1153,6 +1174,27 @@ template {
   font-weight: 500;
   color: white;
   background-color: #FF6060;
+}
+
+/*Responsive*/
+@media (max-width: 964px) {
+  .Tags .tag_elt {
+    border-radius: 10px;
+    padding: 3px 8px;
+    margin-right: 15px;
+    font-size: 12px;
+    font-weight: 500;
+  }
+}
+
+@media (max-width: 768px) {
+  .Tags .tag_elt {
+    border-radius: 10px;
+    padding: 2px 5px;
+    margin-right: 10px;
+    font-size: 10px;
+    font-weight: 500;
+  }
 }
 
 .Texts {
