--- a/last/kasa/src/styles/modules/_tags.scss
+++ b/last/kasa/src/styles/modules/_tags.scss
@@ -11,3 +11,28 @@
 		background-color: $primary;
 	}
 }
+
+/*Responsive*/
+@media (max-width: 964px) {
+	.Tags {
+		.tag_elt {
+            border-radius: 10px;
+            padding: 3px 8px;
+            margin-right: 15px;
+            font-size: 12px;
+            font-weight: 500;
+		}
+	}
+}
+
+@media (max-width: 768px) {
+    .Tags {
+        .tag_elt {
+            border-radius: 10px;
+            padding: 2px 5px;
+            margin-right: 10px;
+            font-size: 10px;
+            font-weight: 500;
+        }
+    }
+}
