--- a/last/kasa/src/styles/index.scss
+++ b/last/kasa/src/styles/index.scss
@@ -8,15 +8,15 @@
 
 
 //modules
-@import "../styles/modules/carrousel";
-@import "../styles/modules/carrouselPic";
+@import "../styles/modules/gallery";
+@import "../styles/modules/galleryPic";
 @import "../styles/modules/grid";
 @import "../styles/modules/lessor";
 @import "../styles/modules/photo";
 @import "../styles/modules/rates";
 @import "../styles/modules/scroller";
 @import "../styles/modules/tags";
-@import "../styles/modules/texts";
+@import "../styles/modules/collapse";
 
 //general
 *,
